# ai-research-assistant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  config.py  dependencies.py  docker-compose.yml  main.py  pyrightconfig.json  requirements.txt
backend/agents/: orchestrator.py  prompts.py  router.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_create_workspaces_and_documents.py
backend/app/: main.py
backend/app/config/: settings.py
backend/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/chat/: models.py  repository.py  router.py  schemas.py  service.py
backend/common/: db.py  exceptions.py  logging.py  metrics.py  redis.py  storage.py
backend/documents/: models.py  repository.py  router.py  schemas.py  service.py
backend/embeddings/: cache.py  service.py
backend/ingestion/: chunker.py  extractor.py  parsers.py  pipeline.py  worker.py
backend/memory/: models.py  repository.py  service.py  summariser.py
backend/rag/: citations.py  pipeline.py  rewriter.py  schemas.py
backend/streaming/: events.py  handler.py  router.py
backend/tools/: base.py  calculator.py  notes.py  registry.py  retrieve.py  summarise.py  web_search.py
backend/vectorstore/: models.py  repository.py
backend/workers/: celery_app.py  tasks.py
backend/workspaces/: models.py  repository.py  router.py  schemas.py  service.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
(+6 files in other folders)
